--- a/react-app/package.json
+++ b/react-app/package.json
@@ -24,9 +24,13 @@
   ],
   "proxy": "http://localhost:7071/",
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "axios": "^0.21.1",
+    "babel-eslint": "^8.2.6",
     "bulma": "^0.9.2",
+    "eslint": "^4.19.1",
+    "g": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
